# calsched

./: DEVGUIDE.md  README.md  README_ru.md  calendar_scheduler.py  pyproject.toml  test_calendar_scheduler.py
.github/workflows/: pylint.yml  unittests.yml
src/calendar_scheduler/: __init__.py
src/calsched/: core.py
tests/: test_calendar_scheduler.py
